ajout couleur pour lien actif

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
       </label>
       <nav role="menubar">
         <a href="#" role="menuitem" class="menu_dynamique">Menu</a>
-        <a href="#" role="menuitem" class="menu_dynamique">Philosophie</a>
+        <a href="philosophie.html" role="menuitem" class="menu_dynamique"
+          >Philosophie</a
+        >
         <div class="dropdown">
           <a href="#" role="menuitem" class="dropbtn menu_dynamique"
             >Restaurant▼</a
