--- a/philosophie.html
+++ b/philosophie.html
@@ -15,11 +15,16 @@
     <header id="entete_page">
       <input type="checkbox" id="toggle_menu" class="declencheur_menu" />
       <label for="toggle_menu" id="boutton_menu">
-        <img src="/asset/img/drop-nav.svg" alt="Boutton d'affichage de menu" />
+        <img src="asset/img/drop-nav.svg" alt="Boutton d'affichage de menu" />
       </label>
       <nav role="menubar">
         <a href="#" role="menuitem" class="menu_dynamique">Menu</a>
-        <a href="#" role="menuitem" class="menu_dynamique">Philosophie</a>
+        <a
+          href="philosophie.html"
+          role="menuitem"
+          class="menu_dynamique lien_actif"
+          >Philosophie</a
+        >
         <div class="dropdown">
           <a href="#" role="menuitem" class="dropbtn menu_dynamique"
             >Restaurant▼</a
