--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header id="entete_page">
       <input type="checkbox" id="toggle_menu" class="declencheur_menu" />
       <label for="toggle_menu" id="boutton_menu">
-        <img src="/asset/img/drop-nav.svg" alt="Boutton d'affichage de menu" />
+        <img src="asset/img/drop-nav.svg" alt="Boutton d'affichage de menu" />
       </label>
       <nav role="menubar">
         <a href="#" role="menuitem" class="menu_dynamique">Menu</a>
